# Babes-Bolyai-University

./: README.md
1st Semester/Algebra/Bonus Project/: project 2 Jorza Ionut.py
1st Semester/Computer System Architecture (ASC)/Laboratory work/: curs8.txt
1st Semester/Computer System Architecture (ASC)/Laboratory work/lab 11/: 8.asm  8.lst
1st Semester/Computer System Architecture (ASC)/Laboratory work/lab 5/: 23.asm  23.lst  8.asm  8.lst
1st Semester/Computer System Architecture (ASC)/Laboratory work/lab 6/: 23.asm  23.lst  8.asm  8.lst  ex7.asm  ex7.lst
1st Semester/Computer System Architecture (ASC)/Laboratory work/lab 8/: apeluri functii 8.asm  apeluri functii 8.lst  text file operation 8.asm  text file operation 8.lst
1st Semester/Computer System Architecture (ASC)/Laboratory work/sem 5/: 3.asm  (+1 more)
2nd Semester/Data Structures & Algorithms/Laboratory Work/LAB 3/SortedIndexedLists/: CMakeLists.txt
2nd Semester/Data Structures & Algorithms/Laboratory Work/LAB 3/SortedIndexedLists/SortedIndexedList/: App.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIndexeList.cpp  SortedIndexedList.h
2nd Semester/Graph Algorithms/Jorza Ionut - Assignment 1/: Documentation.docx  main.py
2nd Semester/Graph Algorithms/Jorza Ionut - Assignment 2/: ReadingFile.txt  WrittenGraph.txt  main.py  random_graph1.txt  random_graph2.txt
2nd Semester/Graph Algorithms/Jorza Ionut - Assignment 3/: 1 to 100 and 100 to 1.txt  ReadingFile.txt  main.py
2nd Semester/Graph Algorithms/Jorza Ionut - Assignment 4/: main.py
2nd Semester/Object Oriented Programming/Bonus projects/Materials/copy/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  Material.c  Material.h  Repository.c  Service.c  Tests.c  UI.c  exe  main.c
2nd Semester/Object Oriented Programming/Bonus projects/Movies/Movies/: App.cpp  CMakeLists.txt  Console.cpp  Console.h  DynamicVector.h  Movie.cpp  Movie.h  Repository.cpp  Repository.h  Service.cpp  Service.h  testqtwidget.cpp  testqtwidget.h  testqtwidget.ui
2nd Semester/Object Oriented Programming/Exam stuff/drivers/send1/: CMakeLists.txt  driver.cpp  driver.h  drivers.txt  main.cpp  observer.h  report.cpp  report.h  reports.txt  repository.cpp  repository.h  session.cpp  session.h  subject.cpp  subject.h  ui_user_window.h  user_window.cpp  user_window.h
2nd Semester/Object Oriented Programming/Laboratory Tests/t1-Jorzul-1/: CMakeLists.txt  main.cpp
2nd Semester/Object Oriented Programming/Laboratory Tests/t1-Jorzul-1/domain/: domain.cpp  domain.h
2nd Semester/Object Oriented Programming/Laboratory Tests/t1-Jorzul-1/repository/: repository.cpp  repository.h
2nd Semester/Object Oriented Programming/Laboratory Tests/t1-Jorzul-1/service/: service.cpp  service.h
2nd Semester/Object Oriented Programming/Laboratory Tests/t1-Jorzul-1/ui/: ui.cpp  ui.h
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/Seminar4_Week1_stub/: CMakeLists.txt
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/Seminar4_Week1_stub/Playlist/: Controller.cpp  Controller.h  FilePlaylist.cpp  FilePlaylist.h  Playlist.vcxproj.filters  SongValidator.cpp  UI.cpp  main.cpp
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a6-Jorzul-1/: CMakeLists.txt  main.cpp
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a6-Jorzul-1/Domain/: Movie.cpp  Movie.h
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a6-Jorzul-1/Repository/: Repository.cpp  Repository.h
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a6-Jorzul-1/Service/: Service.cpp  Service.h
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a6-Jorzul-1/Tests/: test.cpp  test.h
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a6-Jorzul-1/ui/: ui.cpp  ui.h
2nd Semester/Object Oriented Programming/Laboratory and Seminar Work/a7-Jorzul-1/: CMakeLists.txt  CSVWatchList.cpp  CSVWatchList.csv  CSVWatchList.h  Exceptions.cpp  Exceptions.h  FileRepository.cpp  FileRepository.h  FileWatchList.cpp  FileWatchList.h  HTMLWatchList.cpp  HTMLWatchList.h  HTMLWatchList.html  Movie.cpp  Movie.h  MovieValidator.cpp  MovieValidator.h  Repository.cpp  Repository.h  Service.cpp  Service.h  StringUtilities.cpp  StringUtilities.h  UI.cpp  UI.h  UML_A7.mdj  WatchList.cpp  WatchList.h  main.cpp  movies.txt
2nd Semester/Object Oriented Programming/Practice and others/TESTING (FOR FUN)/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h
2nd Semester/Operating Systems/: Some info.txt  Useful commands.txt  pthreads (lab 8).txt  thread things.txt
2nd Semester/Operating Systems/test_pregatire_fork/: CMakeLists.txt  fork_ex.c  main.cpp  pipe_ex_AB.c
3rd Semester/Computer Networks/Exam stuff/: final exam question.txt
3rd Semester/Computer Networks/Others and Utils/: config.seb
3rd Semester/Logical and Functional Programming/Assignments/: P1 ex A.txt  P1 ex B.txt  P1 ex. A.html  P1 ex. B.html  P2 ex A, B.txt  P2 ex. A, B.html  P3.html
3rd Semester/Logical and Functional Programming/Practical Exam/: TEST2  TEST2.64ofasl  test_problem.html  test_problem.txt
3rd Semester/Logical and Functional Programming/testing for Written Exam/: 1, Sub I, ex1  1, Sub I, ex1.64ofasl  1, Sub III  1, Sub III.64ofasl  1, Sub III~  1,2 Sub III  1,2 Sub III.64ofasl  1,2 Sub III~  2, Sub I ex1  2, Sub I ex1.64ofasl  combSum - prolog.txt
(+407 files in other folders)
